# termi-graphics

./: Cargo.toml  LICENSE  README.md
examples/shapes/: .main.rs.swp  main.rs
examples/simple/: main.rs
src/: .animation.rs.swp  .lib.rs.swp  .main.rs.swp  .pixel_art.rs.swp  .shapes.rs.swp  animation.rs  color_string.rs  lib.rs  pixel_art.rs  shapes.rs  ubuntu_terminal_sceme.rs  windows_cmd_sceme.rs
