[package]
name = "termi-graphics"
version = "0.1.5"
authors = ["guy <guy123levinger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

description = "a low-level pixel art dev tool designed for cli art"
repository = "http://github.com/l-tools/termi-graphics"
readme = "README.md"
categories = ["Command-line interface","GUI","Development tools"]
keywords = ["cli", "api","gui","gamedev"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/termi-graphics/0.1.5/termi_graphics"

[lib]
name = "termi_graphics"

path = "src/lib.rs"

test = true

doctest = true

bench = true

doc = true

